--- a/RemoteConfig.json
+++ b/RemoteConfig.json
@@ -1,14 +1,14 @@
 {
-  "packageName": "retro.emulator.gbc",
+  "packageName": "legend.retro.games",
   "forceUpdate": false,
   "forceUpdateContent": "New version with SMALL SIZE, BUG\nFIXED and MORE GAMES is on Store!\nUpdate now!",
-  "forceUpdateUrl": "market://details?id=retro.emulator.gbc",
+  "forceUpdateUrl": "market://details?id=EMPTY",
   "checkClone": false,
   "reviewVersion": -1,
-  "showNESGamesTimeDelay": 0,
+  "showNESGamesTimeDelay": 1000,
   "adsNetwork": 0,
   "adsType": 0,
-  "numberPressToShowAds": 20,
+  "numberPressToShowAds": 15,
   "showBannerMenu": false,
   "showBannerPlay": false,
   "showNewGames": false,
@@ -16,7 +16,7 @@
     {
       "name": "",
       "imgUrl": "https://raw.githubusercontent.com/classicgame8bits/classic.game.retro.emulator.nes/master/big_update.jpg",
-      "downloadUrl": "market://details?id=retro.emulator.gbc"
+      "downloadUrl": "market://details?id=EMPTY"
     }
   ]
 }
