--- a/RemoteConfig.json
+++ b/RemoteConfig.json
@@ -1,6 +1,6 @@
 {
   "packageName": "legend.retro.games",
-  "forceUpdate": true,
+  "forceUpdate": false,
   "forceUpdateContent": "New version with SMALL SIZE, BUG\nFIXED and MORE GAMES is on Store!\nUpdate now!",
   "forceUpdateUrl": "market://details?id=bomb.man.retro.cv6",
   "checkClone": false,
