--- a/RemoteConfig.json
+++ b/RemoteConfig.json
@@ -1,8 +1,8 @@
 {
   "packageName": "legend.retro.games",
-  "forceUpdate": false,
+  "forceUpdate": true,
   "forceUpdateContent": "New version with SMALL SIZE, BUG\nFIXED and MORE GAMES is on Store!\nUpdate now!",
-  "forceUpdateUrl": "market://details?id=bomb.man.retro.cv6",
+  "forceUpdateUrl": "market://details?id=bros.run.classic.world",
   "checkClone": false,
   "reviewVersion": -1,
   "showNESGamesTimeDelay": 0,
